# IC__top30

./: .dockerignore  .env.docker  .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
app/: errors.py  settings.py
app/api_v1/: __main__.py  errors.py  router.py
app/api_v1/admin/: __init__.py  dependencies.py  responses.py
app/api_v1/auth/: __init__.py  client_requests.py  dependencies.py  responses.py
app/api_v1/base/: client_requests.py  dependencies.py  responses.py
app/api_v1/coach/: __init__.py  dependencies.py  responses.py
app/api_v1/event/: __init__.py  client_requests.py  dependencies.py  responses.py
app/api_v1/registration/: __init__.py  client_requests.py  dependencies.py
app/api_v1/request/: __init__.py  dependencies.py  responses.py
app/api_v1/self/: __init__.py  client_requests.py  dependencies.py  responses.py
app/api_v1/slot/: __init__.py  dependencies.py  responses.py
app/api_v1/student/: __init__.py  dependencies.py  responses.py
app/api_v1/user/: __init__.py  dependencies.py  responses.py
app/db/postgres/: __init__.py  models.py
app/domain/: __init__.py
app/domain/admin/: __init__.py  entities.py
app/domain/admin/resources/: __init__.py
app/domain/admin/resources/repo/: __init__.py  base.py  postgres.py
app/domain/admin/resources/updater/: __init__.py  base.py  postgres.py
app/domain/admin/use_cases/: __init__.py
app/domain/admin/use_cases/add/: __init__.py  (+2 more)
app/domain/auth/: __init__.py  entity.py
app/domain/auth/resources/: __init__.py
app/domain/auth/use_cases/: __init__.py
app/domain/coach/: __init__.py  entity.py
app/domain/coach/resources/: __init__.py
app/domain/coach/use_cases/: __init__.py
app/domain/event/: __init__.py  entity.py
app/domain/event/resources/: __init__.py
app/domain/event/use_cases/: __init__.py
app/domain/slot/: __init__.py  entity.py
app/domain/slot/use_cases/: __init__.py
app/domain/student/: __init__.py  entity.py
app/domain/student/resources/: __init__.py
app/domain/student/use_cases/: __init__.py
app/domain/user/: __init__.py  entity.py
app/domain/user/resources/: __init__.py
app/domain/user/use_cases/: __init__.py
app/helpers/: base_entity.py  paginated_list.py
deployment/: pre_start.py
deployment/api/: Dockerfile
deployment/server/: Dockerfile  gunicorn_conf.py
deployment/worker/: Dockerfile
nginx/: nginx.conf
nginx/conf/: proxy_buffering.inc  static.inc
scripts/: __init__.py  __main__.py  utils.py
server/: api.py  base_schemas.py  dependencies.py  jwt.py  main.py  settings.py  utils.py
server/database/: __init__.py  alembic.ini  app_config.py  common.py  redis.py  schemas.py
server/database/alembic/: env.py
server/database/alembic/versions/: 143a2239daa5_.py  ba34184010fa_.py
server/database/models/: __init__.py  base.py  general.py  meetings.py  users.py
tests/: conftest.py
tests/unit/coach/: test__coach_entity.py
tests/unit/student/: test__student_entity.py
tests/unit/user/: test__user_entity.py
(+212 files in other folders)
